--- a/pages/corporativos.html
+++ b/pages/corporativos.html
@@ -106,6 +106,7 @@
             <label for="msg">Cuentanos sobre tu evento</label>
             <textarea id="msg"></textarea>
             <input type="submit" value="Enviar">
+        </div>
     </form>
 
     <footer class="footer"> <!----footer----->
