--- a/pages/personales.html
+++ b/pages/personales.html
@@ -39,7 +39,8 @@
                                 Catering
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../pages/corporativos.html">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="../pages/corporativos.html">Eventos Corporativos</a>
+                                </li>
                                 <li><a class="dropdown-item" href="../pages/personales.html">Eventos Personales</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -60,7 +61,36 @@
             </div>
         </nav>
     </header>
-    <footer class="footer"> <!----footer----->
+    <section class="personales">
+        <h1>Eventos Personales</h1>
+    </section>
+    <div class="personales-texto">
+        <p>
+            ¿Sueñas con un evento donde cada bocado sea una experiencia inolvidable? En Flora Pasteleria convertimos tus deseos más dulces en realidad. Soy Florencia, y con pasión y dedicación,
+            creo pastelería personalizada para cada ocasión especial.<br>
+            Desde cumpleaños y reuniones íntimas hasta eventos corporativos y celebraciones a gran escala, cada torta,
+            cada postre, es elaborado con ingredientes frescos y el amor que solo la repostería artesanal puede ofrecer.
+            Me encanta trabajar contigo para diseñar ese detalle dulce que hará que tu evento sea verdaderamente único.
+            Explora mis creaciones y déjame endulzar tu próxima celebración. ¡Ponte en contacto para que empecemos a
+            crear juntos!</p>
+    </div>
+    <h4 class="solicita-presupuesto">Solicitá tu presupuesto acá!</h4>
+    <form class="form-eventos">
+        <div class="inputs-eventos">
+            <label for="name">Nombre</label>
+            <input type="text" name="nombre" id="nombre" />
+            <label for="mail">Correo electronico</label>
+            <input type="email">
+            <label for="phonenumber">Numero de telefono</label>
+            <input type="tel">
+            <label for="msg">Cuentanos sobre tu evento</label>
+            <textarea id="msg"></textarea>
+            <input type="submit" value="Enviar">
+        </div>
+
+    </form>
+
+        <footer class="footer"> <!----footer----->
 
             <ul class="social-icon">
                 <li class="icon-elem">
@@ -110,9 +140,9 @@
         </footer>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
