--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -72,11 +72,10 @@
 
         <!-------Servicios------->
         <section class="servicios">
-            <h2 class="titulo-servicios">Nuestros servicios</h2>
+            <h2>Nuestros servicios</h2>
             <div class="parrafo-servicios">
                 <p>En Flora Pasteleria, llevamos la dulzura a tu evento, ¡como prefieras! Ofrecemos
-                    servicios de catering de pastelería adaptados a cada ocasión.
-
+                    servicios de catering de pastelería adaptados a cada ocasión.<br>
                     Elegí nuestra opción tradicional para una mesa dulce espectacular, llena de mini tortas, chocolates
                     y galletas artesanales que deleitarán a tus invitados. O, si buscás algo original y dinámico, optá
                     por nuestro food truck de pastelería. En él, servimos café de especialidad, una variedad de tortas
@@ -84,7 +83,9 @@
                     todos amarán.
                 </p>
             </div>
-            <div class="eventos">
+        </section>
+            <section class="eventos">
+
                 <div class="eventos-empresariales">
                     <h3>Eventos Empresariales</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, quod distinctio totam laborum cum
@@ -104,8 +105,8 @@
                         ea quasi nobis numquam eius modi?</p>
                     <img src="./images/comprar-mesa-dulce-boda-rojo-bla.jpg" alt="mesa dulce Cumpleanos">
                 </div>
-            </div>
-        </section>
+            </section>
+
     </main>
     <div class="whatsapp">
         <a href=""><img src="./images/whatsapp.png"></a>
