--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -77,36 +77,43 @@
                 <p>En Flora, tenemos diversas opciones adaptadas a tus necesidades:
                 </p>
             </div>
-            <div class="eventos">
-                <div class="eventos-corporativos">
-                    <h3>Coffee Break <br>
-                        Desayunos/Meriendas para Corporativos</h3>
-                    <p>Ofrecemos una variedad de infusiones, bocaditos salados y dulces para tu evento<br>En nuestro
-                        Coffee Break podrás disfrutar desde un Coffee Clásico con medialunas, Coffee saludables, Coffee
-                        Premium y muy variadas propuestas tanto saladas, dulces y de bebidas. Te acompañamos en un servicio integral.<br>
-                        Trabajamos con menús sin tacc, veganos y vegetarianos. </p>
-                    <img src="./images/eventos-empresarialesimg.avif" alt="mesa de desayuno" class="img_corporativo">
-                    <div class="eventos-box">
-                        <h3>Desayunos/Meriendas en BOX</h3>
-                        <p>Se entrega la comida lista en box con instrucciones y servilletas.<br>
-                        Ideal para corporativos u ocasiones especiales. </p>
-                        <img src="./images/comprar-mesa-dulce-boda-rojo-bla.jpg" alt="mesa dulce Cumpleanos">
-                    </div>
-                    <div class="eventos-mesadulce">
-                        <h3>Mesa Dulce <br>
-                            El Cumpleaños de tus sueños</h3>
-                        <p>
-                            Una mesa dulce llena de infinitas variedades para hacer un cumpleaños inolvidable<br>
-                            Bocaditos irresistibles, jugos naturales y mucho más.
-                        </p>
-                    <div class="eventos-foodtruck">
-                        <h3>Foodtruck Sessions <br>
-                            Una Propuesta Integral y única</h3>
-                        <p>
-                            Hacé de tu evento algo completamente único con nuestro Foodtruck a tu disposición. <br>
-                            Variedad de tortas, dulces, sandwiches, café, licuados y milshakes. Todo con acompañado de un servicio de excelencia.
-                        </p>    
-                </div>
+        </section>
+        <section class="eventos">
+            <div class="eventos-corporativos">
+                <h3>Coffee Break <br>
+                    Desayunos/Meriendas para Corporativos</h3>
+                <p>Ofrecemos una variedad de infusiones, bocaditos salados y dulces para tu evento<br>En nuestro
+                    Coffee Break podrás disfrutar desde un Coffee Clásico con medialunas, Coffee saludables, Coffee
+                    Premium y muy variadas propuestas tanto saladas, dulces y de bebidas. Te acompañamos en un servicio
+                    integral.<br>
+                    Trabajamos con menús sin tacc, veganos y vegetarianos. </p>
+                <img src="./images/eventos-empresarialesimg.avif" alt="mesa de desayuno" class="img_corporativo">
+            </div>
+            <div class="eventos-box">
+                <img src="./images/comprar-mesa-dulce-boda-rojo-bla.jpg" alt="mesa dulce Cumpleanos">
+                <h3>Desayunos/Meriendas en BOX</h3>
+                <p>Se entrega la comida lista en box con instrucciones y servilletas.<br>
+                    Ideal para corporativos u ocasiones especiales. </p>
+                
+            </div>
+            <div class="eventos-mesadulce">
+                <h3>Mesa Dulce <br>
+                    El Cumpleaños de tus sueños</h3>
+                <p>
+                    Una mesa dulce llena de infinitas variedades para hacer un cumpleaños inolvidable<br>
+                    Bocaditos irresistibles, jugos naturales y mucho más.
+                </p>
+            </div>
+            <div class="eventos-foodtruck">
+                <h3>Foodtruck Sessions <br>
+                    Una Propuesta Integral y única</h3>
+                <p>
+                    Hacé de tu evento algo completamente único con nuestro Foodtruck a tu disposición. <br>
+                    Variedad de tortas, dulces, sandwiches, café, licuados y milshakes. Todo con acompañado de un
+                    servicio de excelencia.
+                </p>
+            </div>
+        </section>
 
     </main>
     <div class="whatsapp">
