estilos nuevos del index

--- a/index.html
+++ b/index.html
@@ -79,32 +79,41 @@
             </div>
         </section>
         <section class="eventos">
-            <div class="eventos-corporativos">
-                <h3>Coffee Break <br>
-                    Desayunos/Meriendas para Corporativos</h3>
-                <p>Ofrecemos una variedad de infusiones, bocaditos salados y dulces para tu evento<br>En nuestro
-                    Coffee Break podrás disfrutar desde un Coffee Clásico con medialunas, Coffee saludables, Coffee
-                    Premium y muy variadas propuestas tanto saladas, dulces y de bebidas. Te acompañamos en un servicio
-                    integral.<br>
-                    Trabajamos con menús sin tacc, veganos y vegetarianos. </p>
+            <article class="eventos-tipo">
+                <div>
+                    <h3>Coffee Break <br>
+                        Desayunos/Meriendas para Corporativos</h3>
+                    <p>Ofrecemos una variedad de infusiones, bocaditos salados y dulces para tu evento<br>En nuestro
+                        Coffee Break podrás disfrutar desde un Coffee Clásico con medialunas, Coffee saludables, Coffee
+                        Premium y muy variadas propuestas tanto saladas, dulces y de bebidas. Te acompañamos en un
+                        servicio
+                        integral.<br>
+                        Trabajamos con menús sin tacc, veganos y vegetarianos. </p>
+                </div>
                 <img src="./images/eventos-empresarialesimg.avif" alt="mesa de desayuno" class="img_corporativo">
-            </div>
-            <div class="eventos-box">
+            </article>
+            <article class="eventos-tipo">
                 <img src="./images/comprar-mesa-dulce-boda-rojo-bla.jpg" alt="mesa dulce Cumpleanos">
-                <h3>Desayunos/Meriendas en BOX</h3>
-                <p>Se entrega la comida lista en box con instrucciones y servilletas.<br>
-                    Ideal para corporativos u ocasiones especiales. </p>
-                
-            </div>
-            <div class="eventos-mesadulce">
+                <div>
+                    <h3>Desayunos/Meriendas en BOX</h3>
+                    <p>Se entrega la comida lista en box con instrucciones y servilletas.<br>
+                        Ideal para corporativos u ocasiones especiales. </p>
+                </div>
+            </article>
+            <article class="eventos-tipo">
+                <div>
                 <h3>Mesa Dulce <br>
                     El Cumpleaños de tus sueños</h3>
                 <p>
                     Una mesa dulce llena de infinitas variedades para hacer un cumpleaños inolvidable<br>
                     Bocaditos irresistibles, jugos naturales y mucho más.
                 </p>
-            </div>
-            <div class="eventos-foodtruck">
+                </div>
+                <img src="./images/comprar-mesa-dulce-boda-rojo-bla.jpg" alt="Mesa Dulce">
+            </article>
+            <article class="eventos-tipo">
+                <img src="./images/comprar-mesa-dulce-boda-rojo-bla.jpg" alt="Foodtruck Sessions">
+                <div>
                 <h3>Foodtruck Sessions <br>
                     Una Propuesta Integral y única</h3>
                 <p>
@@ -112,7 +121,8 @@
                     Variedad de tortas, dulces, sandwiches, café, licuados y milshakes. Todo con acompañado de un
                     servicio de excelencia.
                 </p>
-            </div>
+                </div>
+            </article>
         </section>
 
     </main>
