--- a/pages/corporativos.html
+++ b/pages/corporativos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <link rel="icon" type="image/png" href="../images/logo-flora-png.png">
     <title>Eventos Corporativos</title>
 </head>
 
@@ -71,95 +72,109 @@
                 En Flora Pasteleria, entendemos que cada evento corporativo es una oportunidad para fortalecer
                 relaciones, celebrar logros y dejar una impresión duradera. Por eso, te ofrecemos una experiencia de
                 pastelería excepcional, diseñada para elevar tus reuniones y conferencias al siguiente nivel.<br></p>
-                Nos especializamos en crear postres personalizados que no solo son visualmente impresionantes, sino
-                también un deleite para el paladar. Desde elegantes mesas dulces hasta exquisitos bocadillos
-                individuales, cada pieza es elaborada con ingredientes de la más alta calidad y un cuidado artesanal que
-                se nota en cada bocado.<br>
+            Nos especializamos en crear postres personalizados que no solo son visualmente impresionantes, sino
+            también un deleite para el paladar. Desde elegantes mesas dulces hasta exquisitos bocadillos
+            individuales, cada pieza es elaborada con ingredientes de la más alta calidad y un cuidado artesanal que
+            se nota en cada bocado.<br>
             <h3>¿Por qué elegir Flora para tu próximo evento corporativo?</h3>
             <ul>
-                <li>Diseños Personalizados: Creamos postres que se alinean con la identidad de tu marca y la temática de tu
-                evento, incluyendo la opción de incorporar tu logo o colores corporativos.</li>
-                <li>Variedad Exquisita: Ofrecemos un amplio menú que va desde macarons delicados y cupcakes personalizados
-                hasta tortas de diseño y pastelería individual, adaptándonos a tus preferencias y necesidades
-                dietéticas.</li>
+                <li>Diseños Personalizados: Creamos postres que se alinean con la identidad de tu marca y la temática de
+                    tu
+                    evento, incluyendo la opción de incorporar tu logo o colores corporativos.</li>
+                <li>Variedad Exquisita: Ofrecemos un amplio menú que va desde macarons delicados y cupcakes
+                    personalizados
+                    hasta tortas de diseño y pastelería individual, adaptándonos a tus preferencias y necesidades
+                    dietéticas.</li>
                 <li>Calidad Inigualable: Nos comprometemos con la frescura y el sabor, utilizando solo los mejores
-                ingredientes para garantizar una experiencia dulce memorable.</li>
+                    ingredientes para garantizar una experiencia dulce memorable.</li>
                 <li>Servicio Profesional y Confiable: Nos encargamos de todo, desde la elaboración hasta la entrega y
-                montaje, para que tú puedas concentrarte en el éxito de tu evento.</li>
+                    montaje, para que tú puedas concentrarte en el éxito de tu evento.</li>
                 <li>Deja que FLORA añada el toque dulce perfecto que tus clientes y
-                colaboradores recordarán.</li>
-                <li>Contactanos hoy mismo para diseñar la propuesta de pastelería ideal para tu próximo evento corporativo.
-            </li>
+                    colaboradores recordarán.</li>
+                <li>Contactanos hoy mismo para diseñar la propuesta de pastelería ideal para tu próximo evento
+                    corporativo.
+                </li>
             </ul>
         </div>
         <h4>Solicitá tu presupuesto acá!</h4>
     </section>
-
-    <form class="form-eventos">
-        <div class="inputs-eventos">
-            <label for="name">Nombre</label>
-            <input type="text" name="nombre" id="nombre" />
-            <label for="mail">Correo electronico</label>
-            <input type="email">
-            <label for="phonenumber">Numero de telefono</label>
-            <input type="tel">
-            <label for="msg">Cuentanos sobre tu evento</label>
-            <textarea id="msg"></textarea>
-            <input type="submit" value="Enviar">
-        </div>
-    </form>
+    <section class="form-container">
+        <form class="form">
+            <ul>
+                <li>
+                <label for="name">Nombre</label>
+                <input type="text" name="nombre" id="nombre" placeholder="escribe tu nombre" />
+                </li>
+                <li>
+                <label for="mail">Correo electronico</label>
+                <input type="email" placeholder="escribe tu email">
+                </li>
+                <li>
+                <label for="phonenumber">Numero de telefono</label>
+                <input type="tel" placeholder="escribe tu numero de telefono">
+                </li>
+                <li>
+                <label for="msg">Cuentanos sobre tu evento</label>
+                <textarea id="msg" placeholder="dejanos detalles sobre tu evento"></textarea>
+                </li>
+                <li>
+                <input type="submit" value="Enviar">
+                </li>
+            </ul>
+        </form>
+    </section>
 
     <footer class="footer"> <!----footer----->
-            <ul class="social-icon">
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-youtube"></ion-icon>
-                    </a>
-                </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-instagram"></ion-icon>
-                    </a>
-                </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-whatsapp"></ion-icon>
-                    </a>
-                </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-facebook"></ion-icon>
-                    </a>
-                </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="mail-outline"></ion-icon>
-                    </a>
-                </li>
-            </ul>
-            <ul class="menu">
-                <li class="menu-elem">
-                    <a href="../index.html" class="menu-icon"> Inicio </a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./sobreflora.html" class="menu-icon"> Nosotros</a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./corporativos.html" class="menu-icon"> Corporativos </a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./personales.html" class="menu-icon"> Personales </a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./contacto.html" class="menu-icon"> Contacto </a>
-                </li>
-            </ul>
-            <p class="text">2025 | Todos los derechos reservados</p>
-        </footer>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <ul class="social-icon">
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="mail-outline"></ion-icon>
+                </a>
+            </li>
+        </ul>
+        <ul class="menu">
+            <li class="menu-elem">
+                <a href="../index.html" class="menu-icon"> Inicio </a>
+            </li>
+            <li class="menu-elem">
+                <a href="./sobreflora.html" class="menu-icon"> Nosotros</a>
+            </li>
+            <li class="menu-elem">
+                <a href="./corporativos.html" class="menu-icon"> Corporativos </a>
+            </li>
+            <li class="menu-elem">
+                <a href="./personales.html" class="menu-icon"> Personales </a>
+            </li>
+            <li class="menu-elem">
+                <a href="./contacto.html" class="menu-icon"> Contacto </a>
+            </li>
+        </ul>
+        <p class="text">2025 | Todos los derechos reservados</p>
+    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
