--- a/pages/catalogotortas.html
+++ b/pages/catalogotortas.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="image/png" href="../images/logo-flora-png.png">
 
     <title>Catálogo Tortas</title>
 </head>
