--- a/pages/personales.html
+++ b/pages/personales.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,7 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+        <link rel="icon" type="image/png" href="../images/logo-flora-png.png">
+    <title>Eventos Personales</title>
 </head>
 
 <body>
@@ -62,87 +63,105 @@
         </nav>
     </header>
     <section class="personales">
+        <div class="hero-personales">
         <h1>Eventos Personales</h1>
-    </section>
-    <div class="personales-texto">
-        <p>
-            ¿Sueñas con un evento donde cada bocado sea una experiencia inolvidable? En Flora Pasteleria convertimos tus deseos más dulces en realidad. Soy Florencia, y con pasión y dedicación,
-            creo pastelería personalizada para cada ocasión especial.<br>
-            Desde cumpleaños y reuniones íntimas hasta eventos corporativos y celebraciones a gran escala, cada torta,
-            cada postre, es elaborado con ingredientes frescos y el amor que solo la repostería artesanal puede ofrecer.
-            Me encanta trabajar contigo para diseñar ese detalle dulce que hará que tu evento sea verdaderamente único.
-            Explora mis creaciones y déjame endulzar tu próxima celebración. ¡Ponte en contacto para que empecemos a
-            crear juntos!</p>
-    </div>
-    <h4 class="solicita-presupuesto">Solicitá tu presupuesto acá!</h4>
-    <form class="form-eventos">
-        <div class="inputs-eventos">
-            <label for="name">Nombre</label>
-            <input type="text" name="nombre" id="nombre" />
-            <label for="mail">Correo electronico</label>
-            <input type="email">
-            <label for="phonenumber">Numero de telefono</label>
-            <input type="tel">
-            <label for="msg">Cuentanos sobre tu evento</label>
-            <textarea id="msg"></textarea>
-            <input type="submit" value="Enviar">
         </div>
 
-    </form>
-
-        <footer class="footer"> <!----footer----->
-
-            <ul class="social-icon">
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-youtube"></ion-icon>
-                    </a>
+        <div class="personales-texto">
+            <p>
+                ¿Sueñas con un evento donde cada bocado sea una experiencia inolvidable? En Flora Pasteleria convertimos
+                tus deseos más dulces en realidad. Soy Florencia, y con pasión y dedicación,
+                creo pastelería personalizada para cada ocasión especial.<br>
+                Desde cumpleaños y reuniones íntimas hasta eventos corporativos y celebraciones a gran escala, cada
+                torta,
+                cada postre, es elaborado con ingredientes frescos y el amor que solo la repostería artesanal puede
+                ofrecer.
+                Me encanta trabajar contigo para diseñar ese detalle dulce que hará que tu evento sea verdaderamente
+                único.
+                Explora mis creaciones y déjame endulzar tu próxima celebración. ¡Ponte en contacto para que empecemos a
+                crear juntos!</p>
+        </div>
+    
+    <h4 class="solicita-presupuesto">Solicitá tu presupuesto acá!</h4>
+    </section>
+    <section class="form-container">
+        <form class="form">
+            <ul>
+                <li>
+                <label for="name">Nombre</label>
+                <input type="text" name="nombre" id="nombre" placeholder="escribe tu nombre" />
                 </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-instagram"></ion-icon>
-                    </a>
+                <li>
+                <label for="mail">Correo electronico</label>
+                <input type="email" placeholder="escribe tu email">
                 </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-whatsapp"></ion-icon>
-                    </a>
+                <li>
+                <label for="phonenumber">Numero de telefono</label>
+                <input type="tel" placeholder="escribe tu numero de telefono">
                 </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="logo-facebook"></ion-icon>
-                    </a>
+                <li>
+                <label for="msg">Cuentanos sobre tu evento</label>
+                <textarea id="msg" placeholder="dejanos detalles sobre tu evento"></textarea>
                 </li>
-                <li class="icon-elem">
-                    <a href="" class="icon">
-                        <ion-icon name="mail-outline"></ion-icon>
-                    </a>
-                </li>
-            </ul>
-            <ul class="menu">
-                <li class="menu-elem">
-                    <a href="../index.html" class="menu-icon"> Inicio </a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./sobreflora.html" class="menu-icon"> Nosotros</a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./corporativos.html" class="menu-icon"> Corporativos </a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./personales.html" class="menu-icon"> Personales </a>
-                </li>
-                <li class="menu-elem">
-                    <a href="./contacto.html" class="menu-icon"> Contacto </a>
+                <li>
+                <input type="submit" value="Enviar">
                 </li>
             </ul>
-            <p class="text">2025 | Todos los derechos reservados</p>
-        </footer>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-            crossorigin="anonymous"></script>
+        </form>
+    </section>
+    <footer class="footer"> <!----footer----->
+
+        <ul class="social-icon">
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="mail-outline"></ion-icon>
+                </a>
+            </li>
+        </ul>
+        <ul class="menu">
+            <li class="menu-elem">
+                <a href="../index.html" class="menu-icon"> Inicio </a>
+            </li>
+            <li class="menu-elem">
+                <a href="./sobreflora.html" class="menu-icon"> Nosotros</a>
+            </li>
+            <li class="menu-elem">
+                <a href="./corporativos.html" class="menu-icon"> Corporativos </a>
+            </li>
+            <li class="menu-elem">
+                <a href="./personales.html" class="menu-icon"> Personales </a>
+            </li>
+            <li class="menu-elem">
+                <a href="./contacto.html" class="menu-icon"> Contacto </a>
+            </li>
+        </ul>
+        <p class="text">2025 | Todos los derechos reservados</p>
+    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
